<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_gradient" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/button_logout"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners"
            android:text="Status"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/tv_profile"
            android:textColor="@android:color/white"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_title"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="placeholder"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewAvailable_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_text"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/call_button"
            android:textColor="@android:color/white" />


    </RelativeLayout>


</FrameLayout>