<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_gradient"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="94dp"
                android:layout_height="88dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/firebase" />

            <EditText
                android:id="@+id/tv_email"
                android:layout_alignParentStart="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:drawableLeft="@drawable/ic_mail_black_24dp"
                android:layout_below="@+id/login_image"
                android:hint="@string/email_hint"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <EditText
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_email"
                android:textColorHint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:id="@+id/forgot_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_password"
                android:text="Forgot Password?"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="end" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_link"
                android:background="@drawable/rounded_corners"
                android:text="@string/login_button"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:id="@+id/new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_login"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="Need new account?"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_account_link"
                android:background="@android:color/darker_gray"
                android:textSize="24sp"
                android:text="Test"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>